# Algos

./: CMakeLists.txt  main.cpp
lab1/: P3213_DDemichev_1005.cpp  P3213_DDemichev_1296.cpp  P3213_DDemichev_2025.cpp
lab2/: P3213_DDemichev_1207.cpp  P3213_DDemichev_1604.cpp  P3213_DDemichev_1726.cpp
lab3/: P3213_DDemichev_1067.cpp  P3213_DDemichev_1494.cpp  P3213_DDemichev_1628.cpp
