# cmake_minimum_required(VERSION <specify CMake version here>)
project(Algos)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algos main.cpp)
add_executable(Algos1005 lab1/P3213_DDemichev_1005.cpp)
add_executable(Algos1296 lab1/P3213_DDemichev_1296.cpp)
add_executable(Algos2025 lab1/P3213_DDemichev_2025.cpp)
add_executable(Algos1207 lab2/P3213_DDemichev_1207.cpp)
add_executable(Algos1604 lab2/P3213_DDemichev_1604.cpp)
add_executable(Algos1726 lab2/P3213_DDemichev_1726.cpp)
